app/styles/calendar.scss
.ember-power-calendar {
  @include ember-power-calendar(85px, 85px, 140px);

  .count {
    display: inline-block;

    font-size: 60%;
    text-align: center;

    padding: 3px;
    border-radius: 5rem;
    background-color: $dark-contrast-color;
    color: white;

    cursor: pointer;
  }

  .slot {
    transform: scale(0.7);
  }

  .ember-power-calendar-weekdays, .ember-power-calendar-weekday {
    height: auto;
  }

  .ember-power-calendar-day {
    text-align: center;
  }
}

.admin-calendar {
  display: flex;
}

.person-card header {
  display: flex;
  justify-content: space-between;

  .person-session {
    display: flex;
    align-self: center;
  }
}

.subscription-card header {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

